--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -311,7 +311,7 @@
                     <li id="Suppliers" class="nav-item">
                         <a href="@Url.Action("Index", "Suppliers" )" class="nav-link nav-toggle">
                             <i class="fal fa-users">
-                            
+
                             </i>
                             <p>Suppliers</p>
                         </a>
@@ -358,7 +358,7 @@
                         <a href="@Url.Action("PurchaseOrdersList", "Inventory" )" class="nav-link nav-toggle">
                             <i class="fal fa-shopping-cart">
                                 @*<img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">*@
-                            
+
                             </i>
                             <p>Purchase Orders</p>
                         </a>
@@ -375,12 +375,21 @@
         </li>*@
 
                     <li id="SalesSummaryAdmin" class="nav-item">
-                        <a  href="@Url.Action("Summary", "Sales" )" class="nav-link nav-toggle">
+                        <a href="@Url.Action("Summary", "Sales" )" class="nav-link nav-toggle">
                             <i class="fal fa-abacus">
                                 @*<img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">*@
-                            
+
                             </i>
-                            <p>Sales Summary </p>
+                            <p>Product Order Summary </p>
+                        </a>
+                    </li>
+
+                    <li id="SaleByQuantitySummaryAdmin" class="nav-item">
+                        <a href="@Url.Action("SaleByQuantity", "Sales" )" class="nav-link nav-toggle">
+                            <i class="fal fa-abacus">
+                                @*<img style="width: 18px;line-height: 30px;font-size: 24px;vertical-align: -1px;" src="~/Content/assets/assets/icons/Icon-Students.png" alt="">*@
+                            </i>
+                            <p>Product Sale Summary </p>
                         </a>
                     </li>
 
